# quicktok

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  rustfmt.toml  train-enwik8.py  train.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml  python-ci.yml  rust-ci.yml
.trunk/: trunk.yaml
examples/: Cargo.toml
quicktok/: Cargo.toml  pyproject.toml
quicktok/src/: lib.rs  tokenizer.rs
quicktok/src/tokenizer/: basic.rs
src/: lib.rs
src/tokenizer/: basic.rs
